@@ -64,6 +64,9 @@ Trunk - unreleased changes
     HIVE-426. Fix undeterministic query plan because of aliasToWork.
     (Namit Jain via zshao)
 
+    HIVE-404. Fix ordering in "SELECT * FROM t SORT BY col1 LIMIT 100" when
+    query is not a outer-most query.  (Namit Jain via zshao)
+
 Release 0.3.0 - Unreleased
 
   INCOMPATIBLE CHANGES
